review api and router and add offset and limit
